--- a/Segmentation_Model.ipynb
+++ b/Segmentation_Model.ipynb
@@ -29,10 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "000b6e5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Vedaant Joshi\\anaconda3\\envs\\vi\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "162013fe",
    "metadata": {},
    "outputs": [
@@ -104,7 +113,7 @@
        "<Axes: title={'center': 'Blue Channel'}>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "5d544b54",
    "metadata": {},
    "outputs": [],
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "050691b6",
    "metadata": {},
    "outputs": [],
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "4e440105",
    "metadata": {},
    "outputs": [],
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "id": "8e004b0b",
    "metadata": {},
    "outputs": [],
@@ -199,7 +208,10 @@
     "in_channels = 12 for training based on multispectral image input\n",
     "in_channels = 3 for training based on rgb image input\n",
     "\"\"\"\n",
-    "in_channels = 3"
+    "in_channels = 3\n",
+    "\n",
+    "# set the path to save the plots.\n",
+    "image_path = './test_output/' + 'rgb/' if in_channels == 3 else 'multispectral/'"
    ]
   },
   {
@@ -212,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "id": "4e394861",
    "metadata": {},
    "outputs": [],
@@ -262,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "id": "b19d1e08",
    "metadata": {},
    "outputs": [],
@@ -275,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "id": "9709ab05",
    "metadata": {},
    "outputs": [
@@ -289,10 +301,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x20006820220>"
+       "<matplotlib.image.AxesImage at 0x218cb27ee50>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "id": "e5a1c23f",
    "metadata": {},
    "outputs": [],
@@ -331,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "id": "a27de0a0",
    "metadata": {},
    "outputs": [
@@ -341,7 +353,7 @@
        "(4548, 569, 569)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "id": "ac3a63e2",
    "metadata": {},
    "outputs": [],
@@ -392,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "id": "dfef5809",
    "metadata": {},
    "outputs": [],
@@ -408,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "id": "5a704678",
    "metadata": {},
    "outputs": [
@@ -418,7 +430,7 @@
        "(torch.Size([16, 3, 64, 64]), torch.Size([16, 64, 64]))"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "id": "c21abfee",
    "metadata": {},
    "outputs": [],
@@ -498,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "id": "681f7509",
    "metadata": {},
    "outputs": [],
@@ -524,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "id": "b69ffb68",
    "metadata": {},
    "outputs": [],
@@ -1517,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "id": "d0c2c483",
    "metadata": {},
    "outputs": [],
@@ -1546,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "id": "c998a307",
    "metadata": {},
    "outputs": [],
@@ -1563,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "id": "732ed5ed",
    "metadata": {
     "scrolled": false
@@ -1776,6 +1788,8 @@
     "        ax[0].set_title('Label')\n",
     "        ax[1].imshow(output)\n",
     "        ax[1].set_title('Prediction')\n",
+    "        \n",
+    "        fig.savefig(image_path + 'output_prediction_' + str(idx) + '.png')\n",
     "        \n",
     "        if idx == 100:  # To visualize the results on the first few images from the test dataset\n",
     "            break\n",
