--- a/Segmentation_Model.ipynb
+++ b/Segmentation_Model.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "000b6e5b",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4e440105",
    "metadata": {},
    "outputs": [],
@@ -231,6 +231,12 @@
    "source": [
     "def read_image(images_path, labels_path, index):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Reading images for a particular index.\n",
+    "    images_path : path to the image folder.\n",
+    "    labels_path : path to the labels folder.\n",
+    "    index : indexing the list consisting names of all folders.\n",
+    "    \"\"\"\n",
     "    image = os.path.join(images_path, images_folder_list[index], '07.tif')\n",
     "    label = os.path.join(labels_path, labels_folder_list[index], 'dlt.tif')\n",
     "    \n",
@@ -241,6 +247,12 @@
     "\n",
     "def rgb_image_preprocessing(img):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Processing the file to get the r,g,b channels and normalize the input for training purpose\n",
+    "    r,g,b channels only taken into consideration.\n",
+    "    img : img that needs to be processed.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    rgb_image = img[:,:,[3,2,1]]\n",
     "    rgb_image = np.int16(rgb_image)\n",
     "    rgb_image = np.clip(rgb_image,0,1500)\n",
@@ -249,6 +261,11 @@
     "    return rgb_image.transpose(2,0,1)\n",
     "\n",
     "def multispectral_image_preprocessing(img):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Processing the image to get all the channels and normalize the input for training purpose.\n",
+    "    img : img that needs to be processed.\n",
+    "    \"\"\"\n",
     "    img = img[:,:,:]\n",
     "    img = np.int16(img)\n",
     "    img = np.clip(img,0,1500)\n",
@@ -257,6 +274,15 @@
     "    return img.transpose(2,0,1)\n",
     "\n",
     "def visualize_label(num_class, color_dict, img):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Converting the label into a proper format for visualizaion purpose\n",
+    "    num_class : number of segmentation in label.\n",
+    "    color_dict : dictionary storing colors for different segment.\n",
+    "    img : img (label) that needs to be visualized\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Settign the img and creating a blank canvas.\n",
     "    img = img[:,:,0] if len(img.shape) == 3 else img\n",
     "    img_out = np.zeros((64, 64, 3))\n",
     "    \n",
@@ -333,11 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "e5a1c23f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting the data into 3. Train, validation and test set.\n",
     "train, valid, test = np.split(images_folder_list, [int(len(images_folder_list)*0.8), int(len(images_folder_list)*0.9)])"
    ]
   },
@@ -372,6 +399,13 @@
     "class SegmentationDataset(Dataset):\n",
     "    \n",
     "    def __init__(self, data_path, images_ids):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Initializing the required variables.\n",
+    "        data_path : stores the path for the images and labels\n",
+    "        images_ids : List of ids that should be considered in that particular Dataset.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        self.images_path = data_path + 'images'\n",
     "        self.labels_path = data_path + 'labels'\n",
     "        \n",
@@ -382,6 +416,7 @@
     "    \n",
     "    def __getitem__(self, idx):\n",
     "        \n",
+    "        # Reading images and labels.\n",
     "        image = os.path.join(self.images_path, self.images_ids[idx],'07.tif')\n",
     "        label = os.path.join(self.labels_path, self.images_ids[idx],'dlt.tif')\n",
     "        \n",
@@ -409,6 +444,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Creating train, valid and test dataset.\n",
+    "Preparing DataLoader for training and testing images.\n",
+    "\"\"\"\n",
+    "\n",
     "train_dataset = SegmentationDataset(data_path, train)\n",
     "valid_dataset = SegmentationDataset(data_path, valid)\n",
     "test_dataset = SegmentationDataset(data_path, test)\n",
@@ -1535,6 +1575,13 @@
    "outputs": [],
    "source": [
     "def one_hot_encoding(label):\n",
+    "    \"\"\"\n",
+    "    Converting a segmentation image label array to one-hot format \n",
+    "    by replacing each pixel value with a vector of length num_class\n",
+    "    label : segmentation image label\n",
+    "    return : 2d array with same width and height but different depth (num_classes)\n",
+    "    \"\"\"\n",
+    "    \n",
     "    labels = [0, 1, 2]\n",
     "    semantics = []\n",
     "    for colour in labels:\n",
@@ -1544,12 +1591,21 @@
     "    return semantics\n",
     "\n",
     "def accuracy(outputs, labels):\n",
+    "    \"\"\"\n",
+    "    Calculating accuracy on the basis of true positives and true negatives.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    tp = torch.sum(torch.logical_and(labels, outputs))\n",
     "    tn = torch.numel(outputs) - torch.sum(torch.logical_or(labels, outputs))\n",
     "    acc = (tp + tn) / torch.numel(outputs)\n",
     "    return acc\n",
     "\n",
     "def iou_matrix(outputs, labels):\n",
+    "    \"\"\"\n",
+    "    Calculating intersection and union and on the basis of that calculating\n",
+    "    the IoU.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    intersection = torch.logical_and(labels, outputs)\n",
     "    union = torch.logical_or(labels, outputs)\n",
     "    iou = (torch.sum(intersection) + SMOOTH) / (torch.sum(union)+ SMOOTH)\n",
